--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,195 @@
-header a
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300&display=swap');
+
+/* Global Layout */
+:root 
 {
+--text: #000000;
+--primary: #3b4966;
+--secondary: #ebf1ff;
+--accent: #555153;
+--error: red;
+}
+
+body 
+{
+  background: #b7bdc4;
+  margin: 0;
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+header 
+{
+  background: rgba(125, 125, 137, 0.744);
+}
+
+header .container 
+{
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header a 
+{
+  color: #333;
   text-decoration: none;
+}
+
+.logo
+{
+  width: 110px;
+  height: 100px;
+  border-radius: 50%;
+  justify-content: left;
+}
+.pages
+{
+  max-width: 1400px;
+  padding: 20px;
+  margin: 0 auto;
+}
+
+/* Home */
+.home 
+{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 100px;
+}
+
+.itemInfo
+{
+  background: #fff;
+  border: solid;
+  border-radius: 4px;
+  margin: 10px auto;
+  position: relative;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+}
+
+.itemInfo #delete
+{
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  cursor: pointer;
+  background: #f1f1f1;
+  padding: 6px;
+  border-radius: 50%;
+  color: #333;
+}
+
+.itemInfo #view
+{
+  position: absolute;
+  top: 15px;
+  right: 90px;
+  cursor: pointer;
+  background: #f1f1f1;
+  padding: 6px;
+  border-radius: 50%;
+  color: #333;
+}
+
+table
+{
+  margin-top: 8px;
+  margin-left: 15px;
+  margin-bottom: -14px;
+  border: solid;
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 80%;
+}
+
+th, td
+{
+  text-align: center;
+  padding: 0px;
+}
+
+th
+{
+  text-decoration: underline;
+}
+
+/* Create Item Form*/
+label, input 
+{
+  display: block;
+}
+
+input 
+{
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+form button 
+{
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+div.error 
+{
+  padding: 10px;
+  /* background: #ffefef; */
+  /* border: 1px solid var(--error); */
+  color: var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
+}
+
+input.error 
+{
+  border: 1px solid var(--error);
+}
+
+/* Navigation */
+nav 
+{
+  display: flex;
+  align-items: center;
+}
+
+nav a, nav button 
+{
+  margin-left: 10px;
+}
+
+nav button 
+{
+  background: #fff;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-family: "Poppins";
+  cursor: pointer;
+  font-size: 1em;
+}
+
+/* Authorization Forms */
+form.signup, form.login 
+{
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 4px;
 }
