--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,16 @@
 --error: red;
 }
 
+*
+{
+  font-family: 'Source Sans 3', sans-serif;
+}
+
 body 
 {
   background: #b7bdc4;
   margin: 0;
-  font-family: 'Source Sans 3', sans-serif;
+
 }
 
 header 
@@ -33,6 +38,14 @@ header .container
   justify-content: space-between;
 }
 
+#motto
+{
+  position: absolute;
+  top: 25px;
+  right: 1200px;
+  font-size: 3em;
+}
+
 header a 
 {
   color: #333;
@@ -46,6 +59,8 @@ header a
   border-radius: 50%;
   justify-content: left;
 }
+
+
 .pages
 {
   max-width: 1400px;
@@ -64,43 +79,43 @@ header a
 .itemInfo
 {
   background: #fff;
-  border: solid;
   border-radius: 4px;
   margin: 10px auto;
   position: relative;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 }
 
 .itemInfo #delete
 {
   position: absolute;
-  top: 15px;
+  top: 5px;
   right: 20px;
   cursor: pointer;
   background: #f1f1f1;
   padding: 6px;
   border-radius: 50%;
   color: #333;
+  box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.2);
 }
 
 .itemInfo #view
 {
   position: absolute;
-  top: 15px;
+  top: 5px;
   right: 90px;
   cursor: pointer;
   background: #f1f1f1;
   padding: 6px;
   border-radius: 50%;
   color: #333;
+  box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.2);
 }
 
 table
 {
-  margin-top: 8px;
-  margin-left: 15px;
-  margin-bottom: -14px;
-  border: solid;
+  margin-bottom: -20px;
+  margin-left: -30px;
+  margin-right: -10px;
   table-layout: fixed;
   border-collapse: collapse;
   width: 80%;
@@ -134,13 +149,12 @@ input
   box-sizing: border-box;
 }
 
-form button 
+form button
 {
   background: var(--primary);
   border: 0;
   color: #fff;
   padding: 10px;
-  font-family: "Poppins";
   border-radius: 4px;
   cursor: pointer;
 }
@@ -174,14 +188,12 @@ nav a, nav button
 
 nav button 
 {
-  background: #fff;
-  color: var(--primary);
-  border: 2px solid var(--primary);
-  padding: 6px 10px;
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
   border-radius: 4px;
-  font-family: "Poppins";
   cursor: pointer;
-  font-size: 1em;
 }
 
 /* Authorization Forms */
@@ -193,3 +205,57 @@ form.signup, form.login
   background: #fff;
   border-radius: 4px;
 }
+
+/* View Item */
+.showContainer
+{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  padding: 15px;
+  
+}
+
+.siHeader
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.showItem
+{
+  margin-top: 10px;
+  padding: 10px;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.showBtn
+{
+  background: var(--primary);
+  border: 0;
+  color: #fff;;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.showItem
+{
+  font-size: .8em;
+}
+
+#si
+{
+}
+
+#siDesc
+{
+  font-size: 1.5em;
+}
+
